--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,34 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Comp Map</title>
     </head>
     <body>
+        <header>
+            Documented Historic Sites in LA by Neighborhood
+            <div>DJ Map, 2024</div>
+        </header>
         <main>
             <div id="map"></div>
         </main>
     </body>
     <script src="index.js" type="module"></script>
 </html>
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+    </head>
+    <body>
+        <main>
+            <div id="map"></div>
+            <div id="minimap-container" style="position: absolute; bottom: 10px; right: 10px; width: 200px; height: 200px;"></div>
+        </main>
+    </body>
+    <script src="index.js" type="module"></script>
+</html>
+-->
