--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,22 @@
     </head>
     <body>
         <header>
-            Documented Historic Sites in LA by Neighborhood
-            <div>DJ Map, 2024</div>
+            Comp Map Template
+            <div></div>
         </header>
+        <div id="input-container">
+            <input type="text" id="subjectProperty" placeholder="Subject Property BlockLot">
+            <input type="text" id="comparableOne" placeholder="Comparable 1 BlockLot">
+            <input type="text" id="comparableTwo" placeholder="Comparable 2 BlockLot">
+            <input type="text" id="comparableThree" placeholder="Comparable 3 BlockLot">
+            <input type="text" id="comparableFour" placeholder="Comparable 4 BlockLot">
+            <input type="text" id="comparableFive" placeholder="Comparable 5 BlockLot">
+            <input type="text" id="comparableSix" placeholder="Comparable 6 BlockLot">
+            <button onclick="submitBlklots()">Submit</button>
+        </div>
         <main>
             <div id="map"></div>
+            <div id="minimap-container" style="position: absolute; bottom: 10px; right: 65px; width: 200px; height: 200px;"></div>
         </main>
     </body>
     <script src="index.js" type="module"></script>
