--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,35 @@
             Comp Map Template
         </header>
         <div id="input-container">
-            <input type="text" id="subjectProperty" placeholder="Subject Property BlockLot">
-            <input type="text" id="comparableOne" placeholder="Comparable 1 BlockLot">
-            <input type="text" id="comparableTwo" placeholder="Comparable 2 BlockLot">
-            <input type="text" id="comparableThree" placeholder="Comparable 3 BlockLot">
-            <input type="text" id="comparableFour" placeholder="Comparable 4 BlockLot">
-            <input type="text" id="comparableFive" placeholder="Comparable 5 BlockLot">
-            <input type="text" id="comparableSix" placeholder="Comparable 6 BlockLot">
+            <label for="subjectProperty">Subject:</label>
+            <input type="text" id="subjectProperty" placeholder="Enter APN">
+            <label for="comparableOne">Comparable 1:</label>
+            <input type="text" id="comparableOne" placeholder="Enter APN">
+            <label for="comparableTwo">Comparable 2:</label>
+            <input type="text" id="comparableTwo" placeholder="Enter APN">
+            <label for="comparableThree">Comparable 3:</label>
+            <input type="text" id="comparableThree" placeholder="Enter APN">
+            <label for="comparableFour">Comparable 4:</label>
+            <input type="text" id="comparableFour" placeholder="Enter APN">
+            <label for="comparableFive">Comparable 5:</label>
+            <input type="text" id="comparableFive" placeholder="Enter APN">
+            <label for="comparableSix">Comparable 6:</label>
+            <input type="text" id="comparableSix" placeholder="Enter APN">
             <button id="submitBtn">Submit</button>
+            <h3 class="options-heading">Popup Options:</h3>
+            <button id="clearPopupsBtn">Clear Popups</button>
+            <h3 class="options-heading">Minimap Options:</h3>
+            <div class="minimap-options">
+                <button id="minimapLeftBtn">L</button>
+                <button id="minimapClearBtn">Clear</button>
+                <button id="minimapRightBtn">R</button>
+            </div>
+            <h3 class="options-heading">Main Map Options:</h3>
+            <button id="resetBtn">Reset All</button>
         </div>
         <main>
             <div id="map"></div>
-            <div id="minimap-container" style="position: absolute; bottom: 10px; right: 65px; width: 250px; height: 350px;"></div>
+            <div id="minimap-container"></div>
         </main>
         <script src="index.js" type="module"></script>
     </body>
